--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6));
+    /* background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)); */
   }
   
   header {
@@ -31,9 +31,10 @@
     padding: 10px 15px;
     border: none;
     outline: none;
-    background-color: rgba(255, 255, 255, 0.3);
-    border-radius: 16px 0px 16px 0px;
-    border-bottom: 3px solid #DF8E00;
+    color: white;
+    background-color: rgba(14, 8, 8, 0.945);
+    border-radius: 25px 25px 25px 25px;
+    border-bottom: 3px solid #0c0b0b;
     
     color: #313131;
     font-size: 20px;
@@ -55,10 +56,11 @@
   }
   
   .location .city {
-    color: #FFF;
+    color: #0c0b0b;
     font-size: 32px;
     font-weight: 500;
     margin-bottom: 5px;
+    font-family: 'Dancing Script', cursive;
   }
   
   .location .date {
